# Wolfram_Automata

./: CMakeLists.txt  README.md  WA_main.cpp  settings.cpp  settings.h  wolfram_1d_automata_console.cpp  wolfram_animation.cpp  wolfram_root.cpp
Automata/: wolfram_automata.cpp  wolfram_automata.h  wolframs_automata.cpp
Benchmarks/: benchmarks.cpp
Praca/: Praca.md
WNG/: kinda_random_number_generator.cpp
sfml_window/: color_scheme.cpp  color_scheme.h  coord.h  image.cpp  image.h  settings_window.cpp  settings_window.h  slicer.cpp  slicer.h  window.cpp  window.h
